fix: stuck avatar color when selecting

--- a/less/category.less
+++ b/less/category.less
@@ -63,6 +63,13 @@
 				float: left;
 			}
 
+			.avatar .select {
+				.fa-check {
+					border: 1px solid @brand-success;
+					color: @brand-success;
+				}
+			}
+
 			.avatar .select:hover {
 				.avatar {
 					opacity: 0;
